# django/code/app_messages/Serializers.py
@@ -6,5 +6,5 @@ from app_messages.models import Message
 class MessageSerializer(serializers.ModelSerializer):
     class Meta:
         model = Message
-        fields = ['id', 'message_text', 'pub_date']
+        fields = ['id', 'data', 'pub_date', 'key']
 
